--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.profiles.active=
+spring.profiles.active=de                          
+
+guru.username=JM
+guru.password=123456
+guru.dburl=rewqpitupoie
+
